istio/manifest/curl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-deployment
  labels:
    app: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
      - name: curl
        image: alpine/curl:latest
        imagePullPolicy: IfNotPresent
        command:
        - sleep
        - infinity
---
apiVersion: v1
kind: Service
metadata:
  name: curl-service
spec:
  selector:
    app: curl
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
