istio/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildfly-deployment
  annotations:
    com.example/owner: "kumaki"
  labels:
    app: wildfly_deploy
  namespace: demo
spec:
  progressDeadlineSeconds: 60
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: wildfly_app
  template:
    metadata:
      labels:
        app: wildfly_app
      annotations:
        com.example/owner: "kumaki"
    spec:
      containers:
      - name: sample-pod
        image: wildfly-ee8/sample:0.0
        resources: # setting resource request and limits.
          requests:
            memory: "100Mi"
            cpu: "500m"
          limits:
            cpu: "1000m"
            memory: "1000Mi"
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        livenessProbe: # setting managed container lifecycle with liveness and readiness probe
          httpGet:
            port: 8080
            path: /healthz
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            port: 8080
            path: /healthz
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 3

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-ext
  namespace: demo
spec:
  hosts:
  - httpbin.org
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: STATIC
  location: MESH_EXTERNAL
  endpoints:
  - address: 35.171.190.227
